Add stocks daily
